syntax = "proto3";

package auth; // Tên package

service AuthService {
  // Định nghĩa hàm validate
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
}

message ValidateUserRequest {
  int32 id = 1;
  string role = 2;
}

message ValidateUserResponse {
  bool isValid = 1;
}